# hsr-genesis

./: .gitmodules  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: tests.yml
data/urdf/: hsrb4s.urdf
examples/manipulation_rl/: env.py  eval.py  hsr_wrapper.py  train.py
examples/speed_benchmark/: hsr_ik.py
examples/tutorials/: IK_grasp_hsr.py  IK_init_qpos_hsr.py  forward_kinematics_hsr.py  hello_hsr_parallel.py  hello_hsr_sensor.py  rrt_path_planning_hsr.py  spawn_ycb_objects.py  target_marker_options.py  test_target_marker_options.py
examples/utilities/: autotune_joint_gains.py
scripts/: docker-entrypoint.sh  docker-run.sh
src/hsr_genesis/: __init__.py  analytic_ik.py  base_controller.py  force_torque.py  genesis_patches.py  gripper_controller.py  hsr_rigid_entity.py  raycast_filter_patch.py  raycast_ignore_kernel.py  sdf_parser.py  sensor_manager.py  trajectory_completion.py
tests/: conftest.py  test_arm_joint_tracking.py  test_arm_lift_feedforward.py  test_base_traj_control_diag.py  test_camera_lighting.py  test_forward_kinematics_hsr.py  test_gripper_mimic.py  test_head_joint_tracking.py  test_hsr_ik_integration.py  test_hsrb_analytic_ik_ported.py  test_hsrb_analytic_ik_solver_ported.py  test_hsrb_base_controller_ported.py  test_lift_time_from_start.py  test_move_base_control_evaluation.py  test_planar_rrt.py  test_sdf_parser.py  test_sensor_manager.py  test_torso_joint_tracking.py  test_trajectory_completion.py  test_trajectory_execution_steps.py
