[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsr-genesis"
version = "0.1.0"
description = "HSR-specific integrations for Genesis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "HSR Genesis Contributors" }
]
dependencies = [
    "gstaichi==4.6.0",
    "torch",
]

[project.optional-dependencies]
genesis = ["genesis-world"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hsr_genesis", "hsr_genesis.*"]
